<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bg"
    android:orientation="vertical">

    <!--CM Loan Bank-->
    <TextView
        android:id="@+id/tv1"
        android:text="@string/cm"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <!--Loan Application Form-->
    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv1"/>


    <RelativeLayout
        android:id="@+id/r1"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv2">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:hint="@string/fn"
            android:textSize="10dp"
            android:inputType="textPersonName" />

            <!--Last Name-->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:drawableLeft="@drawable/ic_baseline_person_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/ln"
                    android:textSize="10dp"
                    android:inputType="textPersonName" />

                <!--Age-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="10dp"
                        android:drawableLeft="@drawable/ic_baseline_person_24"
                        android:drawablePadding="10dp"
                        android:hint="@string/age"
                        android:textSize="10dp"
                        android:inputType="number" />

                <!--Address-->

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/add"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_marginTop="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_margin="10dp"
                            android:drawableLeft="@drawable/ic_baseline_location_on_24"
                            android:drawablePadding="10dp"
                            android:hint="@string/add"
                            android:textSize="10dp"
                            android:inputType="textShortMessage" />


                    </com.google.android.material.textfield.TextInputLayout>

                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

    <!--Salary-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:textSize="15dp"
        android:text="@string/salary"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="Salary">


            <AutoCompleteTextView
                android:id="@+id/filledexposed"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="none"
                android:textSize="10dp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck">

            </AutoCompleteTextView>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:orientation="horizontal">

    <!--Borrow-->
    <TextView
        android:id="@+id/borrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:textSize="15dp"
        android:text="@string/borrow"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="435dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioone"
                android:onClick="radio_one"/>

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiotwo"
                android:onClick="radio_two"/>

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiothree"
                android:onClick="radio_three"/>


        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/button1"
            android:text="@string/btnOK"
            android:textColor="@color/title"
            tools:ignore="TouchTargetSizeCheck">

        </Button>

        <Button
            android:id="@+id/btnCLR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button2"
            android:text="@string/btnCLR"
            android:textColor="@color/title"
            tools:ignore="TouchTargetSizeCheck">

        </Button>

    </LinearLayout>

</RelativeLayout>
